--- a/asignaciones/asignacion11/Examen/css/large.css
+++ b/asignaciones/asignacion11/Examen/css/large.css
@@ -1,1 +1,108 @@
 
+@media only screen and ( min-width: 40em) 
+{
+  li:first-child {
+       display: none;	
+    }
+  li { 
+      display: inline-block; 
+      margin-right: 1rem;}	
+  li a { 
+      color:#0A0A0A;
+    }
+}
+	.navigation a:first-child
+    {
+        display: none;
+    }
+    .navigation a
+      {
+          display: inline-block;
+	  }
+		
+	.post img{
+		float: right;
+		width:50%; 
+		margin:0em;
+	}
+
+	.contact a img{
+		float: left;
+		width:40%;
+        margin:0em;
+        display: block;
+	}
+		header nav {
+		width: 100%;
+		margin: 0 auto;	
+		max-width: 100%; 
+		background-color: #898989;
+		display:flex;
+		flex-direction: row;
+		justify-content:center;
+	}
+
+	nav { display: block; flex: 1 1 auto; }
+	h1,h2{ 
+        font-size: 5rem;
+        text-align: center;
+    }
+	
+	h3,h4,h6{
+		font-size: 1.5rem;
+		text-align: Center;	
+	}
+	main {
+        width:90%;
+        margin-left: 2em;
+        margin-right: 2em;
+		
+	}
+	
+		body,p{
+		
+			font-size: 1.3rem;
+			color:#335980;
+		}
+	
+		table {
+		  font-size: 1em;
+		}
+		
+		th, td {
+			padding:5px 10px;
+		}
+
+		
+
+.container_home {
+	width:100%;
+	max-width: 1000px;
+	height: 600px;
+	display:flex;
+	flex-direction:column;
+    flex-wrap:wrap;
+
+	justify-content:space-between;
+	
+	align-content:center;
+}
+
+.container_home .town {
+	width: 28%;
+	text-align: center;
+	margin: 20px;
+	padding: 20px;
+	font-size: 1em;
+	order:1;
+	flex:1 1 auto;
+}
+
+.town img{
+width:100%;
+}
+
+.container_town section{grid-template-columns: 1fr;}
+
+
+        
